Fix overflow problems

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,5 +9,10 @@
 }
 
 html {
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden;
 }
